--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@aws-crypto/sha256-js": "^5.2.0",
     "@tailwindcss/cli": "^4.1.5",
     "cohere-ai": "^7.17.1",
     "nodemailer": "^7.0.0",
